--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">TMDB</string>
 
+<!-- Sama kek dibawah tapi gw lupa naroh ini dimana-->
     <string name="detail_birthday">Birthday</string>
     <string name="detail_current_age">" (%d years old)"</string>
     <string name="detail_birthplace">Birthplace</string>
@@ -11,21 +12,142 @@
     <string name="detail_job">Known For</string>
     <string name="detail_also_known_as">Also Known As</string>
 
+<!-- buat biodate PersonDTO-->
     <string name="gender_female">Female</string>
     <string name="gender_male">Male</string>
     <string name="gender_non_binary">Non-binary</string>
 
+<!-- timescale stuff lupa pasang dimana-->
     <string name="hour_short">hr</string>
     <string name="minute_short">min</string>
     <string name="thousand_separator">,</string>
 
+<!-- error message from network module-->
     <string name="error_connection">Unable to fetch data, please check your internet connection and try again.</string>
     <string name="error_service">API service is not responding at the moment, please try again later.</string>
     <string name="error_unknown">Unknown error occurred.</string>
     <string name="button_retry">RETRY</string>
 
+<!-- Disclaimer and copyright stuffs-->
     <string name="tmdb_attribution_title">Attribution</string>
     <string name="tmdb_attribution_message">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>
     <string name="tmdb_attribution_button_text">GOT IT</string>
+
+<!-- Strings from bottom_nav-->
+    <string name="title_home_str">Home</string>
+    <string name="title_favorites_str">Favorites</string>
+
+<!-- Strings from HomeFragment-->
+    <string name="tv_search_query_hint">Explore movies and shows you like!</string>
+    <string name="title_genre">Genre</string>
+
+<!-- START  Strings for containing arrays stuff-->
+    <string name="title_genres">Genres</string>
+    <string name="title_movies">Movies</string>
+    <string name="title_tv_shows">TV Shows</string>
+    <string name="title_people">People</string>
+
+    <string name="title_airing_day">Today</string>
+    <string name="title_airing_week">This Week</string>
+
+    <string name="genre_action">Action</string>
+    <string name="genre_action_adventure"><![CDATA[Action & Adventure]]></string>
+    <string name="genre_adventure">Adventure</string>
+    <string name="genre_animation">Animation</string>
+    <string name="genre_comedy">Comedy</string>
+    <string name="genre_crime">Crime</string>
+    <string name="genre_documentary">Documentary</string>
+    <string name="genre_drama">Drama</string>
+    <string name="genre_family">Family</string>
+    <string name="genre_fantasy">Fantasy</string>
+    <string name="genre_history">History</string>
+    <string name="genre_horror">Horror</string>
+    <string name="genre_kids">Kids</string>
+    <string name="genre_music">Music</string>
+    <string name="genre_mystery">Mystery</string>
+    <string name="genre_news">News</string>
+    <string name="genre_reality">Reality</string>
+    <string name="genre_romance">Romance</string>
+    <string name="genre_science_fiction">Science Fiction</string>
+    <string name="genre_scifi_fantasy"><![CDATA[Sci-Fi & Fantasy]]></string>
+    <string name="genre_soap">Soap</string>
+    <string name="genre_talk">Talk</string>
+    <string name="genre_tv_movie">TV Movie</string>
+    <string name="genre_thriller">Thriller</string>
+    <string name="genre_war">War</string>
+    <string name="genre_war_politics"><![CDATA[War & Politics]]></string>
+    <string name="genre_western">Western</string>
+
+    <string name="select_region">Select a region</string>
+    <string name="argentina">Argentina,AR</string>
+    <string name="australia">Australia,AU</string>
+    <string name="austria">Austria,AT</string>
+    <string name="azerbaijan">Azerbaijan,Az</string>
+    <string name="bangladesh">Bangladesh,BG</string>
+    <string name="belgium">Belgium,BE</string>
+    <string name="brazil">Brazil,BR</string>
+    <string name="bulgaria">Bulgaria,BG</string>
+    <string name="cambodia">Cambodia,KH</string>
+    <string name="canada">Canada,CA</string>
+    <string name="china">China,CN</string>
+    <string name="costa_rica">Costa Rica,CR</string>
+    <string name="croatia">Croatia,HR</string>
+    <string name="czechia">Czechia,CZ</string>
+    <string name="denmark">Denmark,DK</string>
+    <string name="egypt">Egypt,EG</string>
+    <string name="estonia">Estonia,EE</string>
+    <string name="finland">Finland,FI</string>
+    <string name="france">France,FR</string>
+    <string name="germany">Germany,DE</string>
+    <string name="greece">Greece,GR</string>
+    <string name="hong_kong">Hong Kong,HK</string>
+    <string name="hungary">Hungary,HU</string>
+    <string name="iceland">Iceland,IS</string>
+    <string name="india">India,IN</string>
+    <string name="indonesia">Indonesia,ID</string>
+    <string name="iran">Iran,IR</string>
+    <string name="ireland">Ireland,IE</string>
+    <string name="israel">Israel,IL</string>
+    <string name="italy">Italy,IT</string>
+    <string name="japan">Japan,JP</string>
+    <string name="latvia">Latvia,LV</string>
+    <string name="lebanon">Lebanon,LB</string>
+    <string name="liberia">Liberia,LR</string>
+    <string name="lithuania">Lithuania,LT</string>
+    <string name="malaysia">Malaysia,MY</string>
+    <string name="mexico">Mexico,MX</string>
+    <string name="mongolia">Mongolia,MN</string>
+    <string name="morocco">Morocco,MA</string>
+    <string name="nepal">Nepal,NP</string>
+    <string name="netherlands">Netherlands,NL</string>
+    <string name="new_zealand">New Zealand,NZ</string>
+    <string name="norway">Norway,NO</string>
+    <string name="pakistan">Pakistan,PK</string>
+    <string name="peru">Peru,PE</string>
+    <string name="philippines">Philippines,PH</string>
+    <string name="poland">Poland,PL</string>
+    <string name="portugal">Portugal,PT</string>
+    <string name="puerto_rico">Puerto Rico,PR</string>
+    <string name="romania">Romania,RO</string>
+    <string name="russia">Russia,RU</string>
+    <string name="singapore">Singapore,SG</string>
+    <string name="slovakia">Slovakia,SK</string>
+    <string name="south_korea">South Korea,KR</string>
+    <string name="spain">Spain,ES</string>
+    <string name="sweden">Sweden,SE</string>
+    <string name="switzerland">Switzerland,CH</string>
+    <string name="taiwan">Taiwan,TW</string>
+    <string name="thailand">Thailand,TH</string>
+    <string name="turkey">Turkey,TR</string>
+    <string name="ukraine">Ukraine,UA</string>
+    <string name="united_arab_emirates">United Arab Emirates,AE</string>
+    <string name="united_kingdom">United Kingdom,GB</string>
+    <string name="united_states">United States,US</string>
+    <string name="uruguay">Uruguay,UY</string>
+    <string name="vietnam">Vietnam,VN</string>
+
+<!-- END Strings for array stuff-->
+
+
 
 </resources>
