--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">TMDB</string>
 
 <!-- Sama kek dibawah tapi gw lupa naroh ini dimana-->
@@ -33,7 +33,11 @@
     <string name="tmdb_attribution_message">This product uses the TMDB API but is not endorsed or certified by TMDB.</string>
     <string name="tmdb_attribution_button_text">GOT IT</string>
 
-<!-- Strings from bottom_nav-->
+    <string name="item_count" tools:ignore="ExtraTranslation">" (%d)"</string>
+    <string name="item_count_s" tools:ignore="ExtraTranslation">" (%s)"</string>
+    <string name="title_see_all_search" tools:ignore="ExtraTranslation">\"%s\" (%d)</string>
+
+    <!-- Strings from bottom_nav-->
     <string name="title_home_str">Home</string>
     <string name="title_favorites_str">Favorites</string>
 
