--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -216,6 +216,8 @@
     <string name="email">Email</string>
     <string name="email_value">email@mail.com</string>
     <string name="social_media">Social Media</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- END Strings for array stuff-->
 
 
