--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,6 +218,9 @@
     <string name="social_media">Social Media</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="str_menu_sign_out">Sign Out</string>
+    <string name="str_menu_refresh">Menu Refresh</string>
+    <string name="str_profile">Profile</string>
     <!-- END Strings for array stuff-->
 
 
